--- a/data/package.json
+++ b/data/package.json
@@ -13,16 +13,22 @@
     "data",
     "react"
   ],
-  "author": "Greg L. Turnquist",
+  "author": "Irina Golubeva",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/spring-guides/tut-react-and-spring-data-rest/issues"
-  },
-  "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
+    "autoprefixer": "^9.6.0",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.12.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "primeicons": "^1.0.0",
+    "primereact": "^3.1.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "rest": "^1.3.1"
+    "react-transition-group": "^4.1.1",
+    "rest": "^1.3.1",
+    "sass-loader": "^3.2.3"
   },
   "scripts": {
     "watch": "webpack --watch -d"
@@ -33,7 +39,11 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
-    "webpack": "^4.19.1",
+    "css-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.0",
     "webpack-cli": "^3.1.0"
   }
 }
