--- a/data/package.json
+++ b/data/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^16.5.2",
     "react-transition-group": "^4.1.1",
     "rest": "^1.3.1",
-    "sass-loader": "^3.2.3"
+    "sass-loader": "^7.1.0",
+    "resolve-url-loader": "3.1.0"
   },
   "scripts": {
     "watch": "webpack --watch -d"
@@ -38,12 +39,15 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "file-loader": "^4.0.0",
+    "url-loader": "^2.0.1",
+    "image-webpack-loader": "^5.0.0"
   }
 }
