--- a/data/pom.xml
+++ b/data/pom.xml
@@ -75,7 +75,7 @@
 							<goal>install-node-and-npm</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v10.11.0</nodeVersion>
+							<nodeVersion>v10.16.0</nodeVersion>
 							<npmVersion>6.4.1</npmVersion>
 						</configuration>
 					</execution>
@@ -86,6 +86,15 @@
 						</goals>
 						<configuration>
 							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm rebuild node-sass</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>rebuild node-sass</arguments>
 						</configuration>
 					</execution>
 					<execution>
