--- a/data/package.json
+++ b/data/package.json
@@ -47,7 +47,14 @@
     "webpack-cli": "^3.1.0",
     "file-loader": "^4.0.0",
     "url-loader": "^2.0.1",
-    "image-webpack-loader": "^5.0.0"
+    "image-webpack-loader": "^5.0.0",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^5.2.1"
   },
   "homepage": "."
 }
