--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,18 @@ README.html
 built
 dump.rdb
 package-lock.json
+
+## Maven:
+!.mvn/wrapper/maven-wrapper.jar
+/.mvn/
+/mvnw
+/mvnw.bat
+mvnw.cmd
+/log/
+*.log*
+target/
+pom.xml
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.next
+release.properties
